[tool.poetry]
name = "authz"
version = "0.1.0"
description = ""
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]

[tool.poetry.dependencies]
python = "^3.10"
atomkraft = "^0.0.5"
terra-sdk = {git = "https://github.com/informalsystems/terra.py", rev = "poetry"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
